Fixed the pagination on mobile, Next & Last button would display on a second line with akward alignment.

--- a/frontend/assets/css/main.scss
+++ b/frontend/assets/css/main.scss
@@ -753,6 +753,12 @@ ul.undecorated-list {
 
 ul.pagination-list {
   margin-left: 0;
+
+  @include tablet {
+    li {
+      margin-right: 1em;
+    }
+  }
 }
 
 .pagination-link {
